# disinformation-classification

./: .gitignore  Dockerfile  README.md  pyproject.toml
api/: main.py  schemas.py
notebooks/: 010.visuals.ipynb  01_exploratory_coding.ipynb  02_data_preprocessing.ipynb  03_modelling_cv_lsvm.ipynb  03_modelling_tfidf_lsvm.ipynb  04_modelling_cv_lsvm.ipynb  05_modelling_w2v_lsvm.ipynb  06_modelling_glove_lsvm.ipynb  07_modelling_rnn_lstm.ipynb  07_modelling_rnn_lstm.py  08_modelling_cnn.ipynb  08_modelling_cnn.py
src/: config.py  config.yaml  main.py
src/api/: main.py  schemas.py
src/data_cleaning/: run_cleaning.py  text_cleaning.py
src/data_inference/: explain.py  predict.py  report.py  run_inference.py  visualize.py
src/data_ingestion/: build_vectorstore.py
src/data_modelling/: evaluate.py  hyperparameter_tuning.py  model.py  run_modelling.py  vectorizer.py  visualize.py
src/data_preprocessing/: feature_engineering.py  run_preprocessing.py  text_preprocessing.py
src/disinformation_classification/: __init__.py  __main__.py  cli.py  config.py  model.py  predict.py  preprocessing.py  train.py  utils.py
